# near-api-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  account_seed  cspell.json  new_account_seed
.github/: codecov.yml
.github/workflows/: accept-crate-invites.yml  coverage.yml  release-plz.yml  test.yml
api/: CHANGELOG.md  Cargo.toml
api/examples/: account_key_pooling.rs  contract_source_metadata.rs  create_account_and_send_near.rs  deploy_and_call_method.rs  ft.rs  global_deploy.rs  nep_413_signing_message.rs  nft.rs  run_all.sh  sandbox_patch_state.rs  sign_options.rs  specify_backup_rpc.rs  specifying_block.rs  staking_example.rs  storage_management.rs  transaction_queries.rs
api/resources/: nft.wasm  panic.wasm
api/src/: account_id_ext.rs  chain.rs  config.rs  contract.rs  errors.rs  fastnear.rs  lib.rs  rpc_client.rs  sandbox.rs  stake.rs  storage.rs  tokens.rs  transactions.rs  verify.rs
api/src/account/: create.rs  mod.rs
api/src/common/: mod.rs  send.rs  utils.rs
api/src/common/query/: block_rpc.rs  mod.rs  query_request.rs  query_rpc.rs  sandbox_rpc.rs  tx_rpc.rs  validator_rpc.rs
api/src/common/query/handlers/: mod.rs  transformers.rs
api/src/signer/: broadcast.rs  executor.rs  keystore.rs  ledger.rs  mod.rs  secret_key.rs  sequential.rs
api/tests/: account.rs  contract.rs  fetch_tx.rs  global_contracts.rs  multiple_tx_at_same_time_from_same-_user.rs  multiple_tx_at_same_time_from_same_user.rs  nonces.rs  regression.rs  send_tx.rs  sequential_tx.rs  staking.rs  storage.rs
api/tests/common/: mod.rs
examples/: account_key_pooling.rs  contract_source_metadata.rs  create_account_and_send_near.rs  deploy_and_call_method.rs  ft.rs  global_deploy.rs  multi_tx.rs  nep_413_signing_message.rs  nft.rs  sign_options.rs  specify_backup_rpc.rs  specifying_block.rs
examples/resources/: counter.wasm  fungible_token.wasm
src/: account.rs  chain.rs  config.rs  contract.rs  errors.rs  fastnear.rs  lib.rs  prelude.rs  query.rs  send.rs  sign.rs  stake.rs  storage.rs  tokens.rs  transactions.rs  types.rs
src/account/: create.rs  mod.rs  storage.rs
src/common/: mod.rs  query.rs  secret.rs  send.rs  signed_delegate_action.rs  utils.rs
src/common/query/: block_rpc.rs  mod.rs  query_rpc.rs  validator_rpc.rs
src/sandbox/: config.rs  mod.rs
src/sign/: access_keyfile_signer.rs  keystore.rs  ledger.rs  mod.rs  secret_key.rs  seed_signer.rs
src/signer/: access_keyfile_signer.rs  keystore.rs  ledger.rs  mod.rs  secret_key.rs
src/transactions/: mod.rs  multi_txs.rs
src/types/: contract.rs  mod.rs  non_empty_vector.rs  private_key.rs  query_request.rs  reference.rs  signed_delegate_action.rs  stake.rs  storage.rs  tokens.rs  transactions.rs  views.rs
tests/: account.rs  contract.rs  multiple_tx_at_same_time_from_same-_user.rs
types/: CHANGELOG.md  Cargo.toml
types/src/: account.rs  actions.rs  contract.rs  conversions.rs  delegate_action.rs  errors.rs  ft.rs  integers.rs  lib.rs  nep413.rs  nft.rs  public_key.rs  reference.rs  sandbox.rs  secret_key.rs  signable_message.rs  signature.rs  stake.rs  storage.rs  tokens.rs  transaction_result.rs  transactions.rs  vector.rs
types/src/crypto/: mod.rs  public_key.rs  secret_key.rs  signature.rs
types/src/json/: integers.rs  mod.rs  vector.rs
types/src/transaction/: actions.rs  delegate_action.rs  mod.rs  receipt.rs  result.rs
types/src/utils/: mod.rs
