[package]
name = "near-api"
version = "0.5.0"
rust-version = "1.81"
authors = [
    "akorchyn <artur.yurii.korchynskyi@gmail.com>",
    "frol <frolvlad@gmail.com>",
    "Near Inc <hello@nearprotocol.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/near/near-api-rs"
description = "Rust library to interact with NEAR Protocol via RPC API"

exclude = ["resources", "tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[dependencies]
borsh = "1.5"
async-trait = "0.1"

reqwest = { version = "0.12", features = ["blocking", "json"] }
futures = "0.3"
# Ad-hoc fix for compilation errors (rustls is used instead of openssl to ease the deployment avoiding the system dependency on openssl)
openssl = { version = "0.10", features = ["vendored"] }

bip39 = { version = "2.0.0", features = ["rand"] }
ed25519-dalek = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
slipped10 = { version = "0.4.6" }
url = { version = "2", features = ["serde"] }
tokio = { version = "1.0", default-features = false, features = ["time"] }
tracing = "0.1"
bs58 = "0.4"

thiserror = "2"

near-ledger = { version = "0.8.1", optional = true }

near-crypto = "0.29.0"
near-primitives = "0.29"
near-jsonrpc-client = "0.16"
near-jsonrpc-primitives = "0.29"
near-contract-standards = "5.9"
near-sdk = "5.9"

near-account-id = "1.0.0"
near-gas = { version = "0.3", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }

near-sandbox-utils = { version = "0.14", optional = true }
tempfile = { version = "3.19", optional = true }
fs2 = { version = "0.4", optional = true }
json-patch = { version = "4.0", optional = true }

near-abi = "0.4.2"
zstd = "0.13"

keyring = { version = "3.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
], optional = true }

near-workspaces = { version = "0.18.0", optional = true }

[features]
default = ["ledger", "keystore"]
ledger = ["near-ledger"]
keystore = ["dep:keyring"]
workspaces = ["dep:near-workspaces"]
testing = [
    "dep:near-sandbox-utils",
    "dep:tempfile",
    "dep:fs2",
    "dep:json-patch",
]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }
near-api = { path = ".", features = ["testing"] }
