[workspace]
resolver = "3"
members = ["api", "types"]
rust-version = "1.85"

[workspace.package]
edition = "2021"
resolver = "2"
version = "0.7.8"
authors = [
    "akorchyn <artur.yurii.korchynskyi@gmail.com>",
    "frol <frolvlad@gmail.com>",
    "Near Inc <hello@nearprotocol.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-api-rs"


[workspace.dependencies]
near-api-types = { path = "types", version = "~0.7.8" }

borsh = "1.5"
async-trait = "0.1"
base64 = "0.22"

reqwest = "0.12"
futures = "0.3"
# Ad-hoc fix for compilation errors (rustls is used instead of openssl to ease the deployment avoiding the system dependency on openssl)
openssl = { version = "0.10", default-features = false }

bip39 = "2.0.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0.57"
serde_dbgfmt = "0.1.0"
slipped10 = { version = "0.4.6" }
url = { version = "2", features = ["serde"] }
tokio = { version = "1.0", default-features = false }
tracing = "0.1"
thiserror = "2"
zstd = "0.13"
keyring = { version = "3.2", default-features = false }
bs58 = "0.5"
sha2 = "0.10"
bolero = "0.13"

primitive-types = { version = "0.10.0", default-features = false }
ed25519-dalek = { version = "2.1.0", default-features = false, features = [] }
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "recovery",
    "alloc",
] }

near-account-id = { version = "1.1.0", features = ["serde", "borsh"] }
near-gas = { version = "0.3", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }
near-abi = "0.4.2"
near-ledger = "0.9.1"
near-openapi-client = "0.5.2"
near-openapi-types = "0.5.2"

# Dev-dependencies
near-primitives = { version = "0.33" }
near-crypto = { version = "0.33" }
near-sandbox = { version = "0.2.0", features = [
    "generate",
], default-features = false }
testresult = "0.4"
