[package]
name = "near-api"
version = "0.6.1"
rust-version = "1.85"
authors = [
    "akorchyn <artur.yurii.korchynskyi@gmail.com>",
    "frol <frolvlad@gmail.com>",
    "Near Inc <hello@nearprotocol.com>",
]
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "2"
repository = "https://github.com/near/near-api-rs"
description = "Rust library to interact with NEAR Protocol via RPC API"

exclude = ["resources", "tests"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[dependencies]
borsh = "1.5"
async-trait = "0.1"
base64 = "0.22"

reqwest = { version = "0.12", features = ["blocking", "json"] }
futures = "0.3"
# Ad-hoc fix for compilation errors (rustls is used instead of openssl to ease the deployment avoiding the system dependency on openssl)
openssl = { version = "0.10", features = ["vendored"] }

bip39 = { version = "2.0.0", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
slipped10 = { version = "0.4.6" }
url = { version = "2", features = ["serde"] }
tokio = { version = "1.0", default-features = false, features = ["time"] }
tracing = "0.1"
thiserror = "1"

near-ledger = { version = "0.9.1", optional = true }
near-openapi-client = "0.3.0"
near-types.workspace = true

near-sandbox-utils = { git = "https://github.com/near/near-sandbox", branch = "main", optional = true }

zstd = "0.11"

keyring = { version = "3.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
], optional = true }


[features]
default = ["keystore", "ledger"]
ledger = ["near-ledger"]
keystore = ["dep:keyring"]
sandbox = ["near-sandbox-utils"]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }
near-api = { path = ".", features = ["sandbox"] }
