[package]
name = "near-api-types"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Rust types library to interact with NEAR Protocol via RPC API"


[dependencies]
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
thiserror.workspace = true
base64.workspace = true
sha2.workspace = true
serde_with.workspace = true

near-openapi-types.workspace = true
near-account-id.workspace = true
near-gas.workspace = true
near-token.workspace = true
near-abi.workspace = true
primitive-types.workspace = true

ed25519-dalek.workspace = true
secp256k1.workspace = true

near-ledger = { workspace = true, optional = true }

[dev-dependencies]
bolero.workspace = true
near-primitives.workspace = true
near-crypto.workspace = true
testresult.workspace = true

[features]
ledger = ["near-ledger"]

[lints]
workspace = true
